# borg

./: .gitignore  .gitmodules  CENTOS_README  CMakeLists.txt  DEPENDENCIES  LICENSE  MODULES  NOUN  README  README.md  TODO.md  requirements.txt  run_cmake  setup.py  waf  wscript
src/: CMakeLists.txt  wscript
src/cmake/: FindCargo.cmake  FindCython.cmake  FindGSL.cmake  FindNumpy.cmake  FindPythonHeaders.cmake  UseCython.cmake
src/cpp/: CMakeLists.txt
src/cpp/borg/: CMakeLists.txt
src/cpp/borg/python/: CMakeLists.txt  _borg.cc  abstract_action.cc  abstract_action.h  abstract_model.cc  abstract_model.h  abstract_outcome.cc  abstract_outcome.h  random_model.h
src/python/: CMakeLists.txt  cargo_site_defaults.py  run_borg.py  wscript
src/python/borg/: CMakeLists.txt  __init__.py  aaai.py  analyzers.py  bilevel.py  bregman.pyx  cache.py  data.py  defaults.py  dimacs.pyx  expenses.py  experimental.py  fake.py  features.py  log.py  minion.py  models.pxd  models.py  models.pyx  opb.py  parallel.py  planners.py  planners.pyx  portfolios.py  regression.py  solver_io.py  solvers.py  statistics.pxd  statistics.pyx  storage.py  tasks.py  util.py  wscript
src/python/borg/_files/: CMakeLists.txt
src/python/borg/_files/for_tests/: CMakeLists.txt  foo_solver.py  s57-100.cnf
src/python/borg/attic/: analyzers.py  data.py  tasks.py
src/python/borg/attic/_files/: beamer_sfmath.tex  features1s
src/python/borg/attic/pb/: CMakeLists.txt  opb.py
src/python/borg/attic/portfolio/: __init__.py  planners.py  world.py
src/python/borg/attic/sat/: CMakeLists.txt  __init__.py  cnf.py
src/python/borg/attic/solvers/: __init__.py  competition.py  lookup.py  preprocessing.py  sanitizing.py  satelite.py
src/python/borg/attic/test/: CMakeLists.txt
src/python/borg/attic/tools/: calibrate.py  run_solvers.py  run_validation.py  solve.py
src/python/borg/domains/: CMakeLists.txt  __init__.py  pb.py  wscript
src/python/borg/domains/asp/: __init__.py  features.py  instance.pyx  solvers.py  wscript
src/python/borg/domains/features/: CMakeLists.txt  __init__.py  common.py
src/python/borg/domains/max_sat/: CMakeLists.txt  __init__.py  features.pyx  instance.pyx  solvers.py  wscript
src/python/borg/domains/pb/: CMakeLists.txt  __init__.py  features.pyx  instance.pyx  opb.py  solvers.py  wscript
src/python/borg/domains/sat/: CMakeLists.txt  __init__.py  dimacs.pyx  features.py  features.pyx  instance.pyx  solvers.py  wscript
src/python/borg/domains/solvers/: CMakeLists.txt
src/python/borg/experiments/: __init__.py  apply_models.py  common.py  ll_vs_features.py  ll_vs_train.py  mix_over_k.py  mul_over_alpha.py  simulate_iid.py  simulate_runs.py  solved_vs_b.py  wscript
src/python/borg/features/: CMakeLists.txt  __init__.py  common.py  pb.pyx
src/python/borg/pb/: CMakeLists.txt  answer.py
src/python/borg/portfolio/: CMakeLists.txt  _base.pxd  _base.pyx  _bellman.pyx  _models.pxd  _models.pyx  bellman.py  decision_world.py  models.py  planners.py  sat_world.py  strategies.die.py  strategies.py  world.py
src/python/borg/portfolio/strategies/: CMakeLists.txt  __init__.py  featured.py  fixed.py
src/python/borg/portfolio/test/: CMakeLists.txt  support.py  test_bellman.py  test_models.py  test_planners.py  test_strategies.py
src/python/borg/sat/: CMakeLists.txt  __init__.py  answer.py  cnf.py
src/python/borg/sat/test/: CMakeLists.txt  test_cnf.py
src/python/borg/solvers/: CMakeLists.txt  __init__.py  analyzers.py  attempts.py  base.py  common.py  competition.py  lookup.py  mock_competition.py  mock_preprocessing.py  pb.py  portfolio.py  preprocessing.py  recycling.py  sanitizing.py  sat.py  satelite.py  uncompressing.py  zefram.py
src/python/borg/solvers/test/: CMakeLists.txt  support.py  test_base.py  test_competition.py  test_lookup.py  test_mock_preprocessing.py  test_portfolio.py  test_preprocessing.py  test_recycling.py  test_satelite.py  test_uncompressing.py
src/python/borg/test/: CMakeLists.txt  opb.py  test_analyzers.py  test_cache.py  test_models.py  test_planners.py  test_statistics.py  test_statistics_c.pyx  wscript
src/python/borg/tools/: CMakeLists.txt  __init__.py  analyze.py  analyze_instance.py  armada.py  bench_bellman.py  build_solver.py  bundle_run_data.py  cache_data.py  cactus.py  calibrate.py  check_solvers.py  copy_rows.py  delete_trial.py  evaluate_model.py  evaluate_regression.py  expand_runs.py  generate_ddl.py  get_calibration.py  get_features.py  get_targets.py  get_tasks.py  ground.py  plan.py  plot_performance.py  plot_validation.py  preprocess_tasks.py  print_run.py  reextend.py  run_for_paramils.py  run_solvers.py  run_validation.py  run_validation2.py  sanitize_cnfs.py  simulate.py  simulate_splits.py  solve.py  test_solvers.py  train.py  view.py  (+3 more)
src/python/borg/tools/portfolio/: CMakeLists.txt  cache_data.py  learn.py  solve.py
src/python/borg/tools/sat/: CMakeLists.txt  get_tasks.py  run_solvers.py  test_solvers.py
src/python/borg/tools/solve/: pb.py  sat.py
src/python/borg/tools/test/: CMakeLists.txt  test_analyze.py  test_analyze_instance.py  test_build_solver.py  test_get_tasks.py  test_solve.py
src/python/borg/unix/: accounting.py  proc.py  sessions.py  wscript
src/python/borg/visual/: CMakeLists.txt  wscript
src/python/borg/visual/templates/: CMakeLists.txt  analytics.js  borgview.css  borgview.js  index.html  tclass.html  wscript
src/python/utexas/: data.py  rowed.py
src/python/utexas/max_sat/: solvers.py  wcnf.py
src/python/utexas/portfolio/: evaluate.py  evaluees.py  models.py  planners.py  sat_world.py  strategies.py  world.py
src/python/utexas/portfolio/test/: support.py  test_models.py  test_strategies.py
src/python/utexas/quest/acridid/: argo_plot.py  (+3 more)
src/python/utexas/sat/: __init__.py  cnf.py  evaluation.py  preprocessors.py  solvers.py  solvers_2007.py  solvers_2009.py  tasks.py
src/python/utexas/tools/: calibrate.py  evaluate.py  generate_ddl.py  print_run.py  xz.py
src/scripts/: CMakeLists.txt  borg.py  echo_numpy_path.py  echo_python_inc_path.py  run_borg.py  run_cmake  scan_pyx_depends
(+143 files in other folders)
