install(
	FILES
        __init__.py
        support.py
        test_base.py
        test_competition.py
        test_lookup.py
        test_portfolio.py
        test_preprocessing.py
        test_recycling.py
        test_sanitizing.py
        test_satelite.py
        test_uncompressing.py
	DESTINATION borg/solvers/test
	)

